--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,321 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+/*NavBar*/
+.navbar {
+  position: fixed;
+  background-color: #ffffff;
+  border-bottom: 1px solid grey;
+  width: 100%;
+  height: 10vh;
+  box-shadow: 1px 1px 10px grey;
+  display: flex;
+  z-index: 10;
+}
+.navbar .logo {
+  width: 30%;
+}
+.navbar .menu {
+  width: 70%;
+  right: 0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.navbar .menu .item {
+  border: 1px solid black;
+  box-shadow: 1px 1px 5px gray;
+  width: 150px;
+  height: 40px;
+  text-align: center;
+  padding-top: 5px;
+  font-weight: 600;
+}
+.navbar .menu .item:hover {
+  transform: scale(1.1);
+  background-color: #a7c2d675;
+}
+/*Login*/
+.login {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  border: 1px solid grey;
+  box-shadow: 1px 1px 10px grey;
+  background-color: rgba(24, 121, 177, 0.6);
+  border-radius: 2rem;
+  padding: 1rem;
+  width: 300px;
+  height: 280px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.login .inputs {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.login .inputs input {
+  width: 100%;
+  height: 40px;
+  border-radius: 1rem;
+  text-align: center;
+}
+.login .btn {
+  width: 60%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.login .btn div {
+  width: 100%;
+  height: 50%;
+  border: 1px solid grey;
+  text-align: center;
+}
+/*Panel*/
+.panel {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: url('./assets/fondo.jpg');
+  background-size: cover;
+  filter: opacity(0.6);
+  z-index: -10;
+}
+/*Comercializadora*/
+.comercializadora {
+  position: absolute;
+  top: 100px;
+  left: 5%;
+  border-radius: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.comercont {
+  width: 250px;
+  height: fit-content;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: rgba(255, 166, 0, 0.644);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.comercializadora div {
+  margin-bottom: 5px;
 }
+.btn-style {
+  width: fit-content;
+  height: 30px;
+  padding: 5px 10px;
+  margin: 5px;
+  border: 1px solid #000000;
+  color: #000000;
+  background-color: #ffffff;
+  border-radius: 5px;
+}
+.btn-style:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+/*Comparativa*/
+.comparativa {
+  width: 90%;
+  margin: 5%;
+  height: fit-content;
+  background-color: rgba(255, 255, 255, 0.6);
+  position: absolute;
+  top: 100px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  border-radius: 1rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: 1px solid black;
+}
+.inputForm {
+  width: 90%;
+  height: fit-content;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 15px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.inputForm div {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  justify-content: space-between;
+}
+.inputForm div label {
+  width: 50%;
+}
+.dina4 {
+  width: 210mm;
+  height: 297mm;
+  border: 1px solid black;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.cabecera {
+  width: 90%;
+  height: 20%;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+.logocabecera img {
+  width: 60%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+.logocomer {
+  width: 30%;
+  height: 135px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: rgba(248, 114, 4, 0.1);
+}
+.logocomer img {
+  width: 100%;
+  margin: 0;
+  position: absolute;
+  right: 0px;
+}
+.detalles {
+  font-family: Tahoma, sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  color: #000;
+  width: 70%;
+  height: 60%;
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  background-color: rgba(248, 114, 4, 0.1);
+}
+.detalles .left {
+  height: 100%;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+#cliente {
+  width: 220px;
+}
+.detalles .left div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.detalles .right {
+  height: 100%;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.potencia {
+  width: 90%;
+  height: 20%;
+}
+
+.oferta {
+  width: 90%;
+  height: 250px;
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 20px;
+  justify-content: space-evenly;
+  padding: 3px;
+}
+.oferta div {
+  width: 230px;
+  height: 110px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  background-color: #acdfe2;
+}
+#anual {
+  width: 500px;
+  font-size: 46px;
+  background-color: #f0971d;
+  color: #ffffff;
+}
+.table-potencias,
+.table-energias {
+  width: 90%;
+}
+th,
+td {
+  text-align: center;
+  border-right: 1px solid black;
+}
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+th {
+  background-color: #f0971d;
+  color: #ffffff;
+}
+/*OFERTAS*/
+.ofertas {
+  position: absolute;
+  top: 10vh;
+  left: 30%;
+}
+.filaoferta,
+.table {
+  border: 1px solid black;
+  display: flex;
+}
+.filaoferta tr,
+.table tr {
+  display: flex;
+  width: 100%;
+}
+.filaoferta td {
+}
+/*MAP OFERTAS*/
+.mapofertas {
+  position: absolute;
+  top: 15vh;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #ffffff88;
+}
+/*PDF IMG*/
+.pdfimg {
+  position: absolute;
+  top: 20px;
+  right: 0px;
+  cursor: pointer;
 }
